Resolves: fdo#70588 MultiLineEdits don't need WB_WORDBREAK set

and inherits from Edit which reuses that same bit for password

Change-Id: Ice27caecfd82e2dd7b000474f37b601fd4628766